--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">About</a>
+                            <a class="nav-link" href="./index.html">About</a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                            <a class="nav-link" href="./assets/portfolio.html">Portfolio</a>
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
+                            <a class="nav-link" href="./assets/contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
